# idxlens

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .mise.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.lambda  LICENSE  Makefile  README.md  action.yml  codecov.yml  go.mod  go.sum  tools.go
.githooks/: commit-msg  pre-commit  pre-rebase
.github/workflows/: ci.yml  docker.yml  pr.yml  pypi.yml  release.yml
action/: entrypoint.sh
bindings/cgo/: main.go
bindings/python/: pyproject.toml
bindings/python/idxlens/: __init__.py
bindings/python/tests/: test_idxlens.py
cmd/idxlens/: main.go
docs/: architecture.md  cli-reference.md  contributing.md  dictionaries.md  getting-started.md
docs/examples/: basic-extraction.md  batch-processing.md
internal/cli/: analyze.go  analyze_test.go  auth.go  auth_test.go  banner.go  banner_test.go  batch.go  batch_test.go  classify.go  classify_test.go  client_factory.go  command_test.go  constants.go  errors.go  errors_test.go  extract.go  extract_esg.go  extract_esg_test.go  extract_financial.go  extract_financial_test.go  extract_test.go  extract_text.go  extract_text_test.go  extractor.go  extractor_test.go  fetch.go  fetch_test.go  flags.go  flags_test.go  input_resolver.go  input_resolver_test.go  list.go  list_test.go  logger.go  logger_test.go  root.go  root_test.go  services.go  upgrade.go  upgrade_test.go  (+2 more)
internal/domain/: auditor.go  auditor_test.go  batch.go  batch_test.go  bilingual.go  esg.go  (+24 more)
lambda/: main.go
registry/: presentations.json
scripts/: install.sh  release.sh
(+72 files in other folders)
